fix: remove navbar's overflow: hidden

--- a/src/pages/Configurators/components/Sections/Navbar/Navbar.module.scss
+++ b/src/pages/Configurators/components/Sections/Navbar/Navbar.module.scss
@@ -8,7 +8,6 @@
 	left: 0;
 
 	width: 100%;
-  overflow: hidden;
 	height: 160px;
 	background-color: $primary-background;
 
